# pydantic_settings_config_loader_demo

./: .env.dev  .env.local  .env.say_hello  .env.uat  .gitignore  .pre-commit-config.yaml  README.md  config.dev.json  config.dev.yaml  config.json  config.local.json  config.local.yaml  config.uat.yaml  pyproject.toml
scripts/: cleanup.py  setup.py
src/: app.py  app_v2.py  main.py  main_v2.py  main_v3.py  main_v4.py  main_v5.py
src/config_loaders/: __init__.py  config_loader.py  config_loader_factory.py  config_loader_factory_registry.py  config_loader_factory_v2.py  env_config_loader.py  env_file_loader.py  env_loader.py  gcp_secret_json_loader.py  gcp_secret_loader.py  gcp_secret_yaml_loader.py  json_config_loader.py  json_loader.py  yaml_config_loader.py  yaml_file_loader.py  yaml_loader.py
src/config_loaders/config_loader_args/: __init__.py  config_loader_args.py  env_config_loader_args.py  gcp_secret_env_config_loader_args.py  gcp_secret_json_config_loader_args.py  gcp_secret_yaml_config_loader_args.py  gcp_storage_env_config_loader_args.py  gcp_storage_json_config_loader_args.py  gcp_storage_yaml_config_loader_args.py  json_config_loader_args.py  yaml_config_loader_args.py
src/config_loaders/config_providers/: __init__.py  config_provider.py  file_config_provider.py  gcp_secret_config_provider.py  gcp_storage_config_provider.py
src/config_loaders/decorators/: __init__.py  base_inject_settings.py  inject_settings_from_env_file.py  inject_settings_from_json_file.py  inject_settings_from_loader_args.py  inject_settings_from_yaml_file.py
src/config_loaders/env_config_processors/: __init__.py  default_env_config_processor.py  env_config_processor.py
src/decorators/: __init__.py  inject_logger.py  inject_typed_request.py
src/schemas/: __init__.py  chat.py  greeting.py
src/settings/: settings.py
(+43 files in other folders)
